# cpptcpmultiplayer

./: .gitignore  CMakeLists.txt  README.md
include/client/: client.h
include/common/: game_state.h  packet.h  serialization.h
include/server/: connection_manager.h  message_queue.h  server.h
src/client/: client.cpp  echo_client.cpp  game_client.cpp
src/common/: game_state.cpp  packet.cpp  serialization.cpp
src/server/: connection_manager.cpp  echo_server.cpp  game_server.cpp  message_queue.cpp  server.cpp
